only build logging when necessary

--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -4,6 +4,17 @@ on:
     branches:
       - main
   pull_request:
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - "sentry_logging/**"
+      - ".github/workflows/logging.yml"
+  pull_request:
+    paths:
+      - "sentry_logging/**"
+      - ".github/workflows/logging.yml"
 defaults:
   run:
     shell: bash
