--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -6,6 +6,8 @@ description: >
 homepage: https://docs.sentry.io/platforms/dart/
 repository: https://github.com/getsentry/sentry-dart
 
+# when bumping the min. sdk version, upgrade the e2e_test project too, it should compile using
+# the min. supported sdk version to check back compatibility.
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
