don't build dart/flutter if just logging is changed

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - main
   pull_request:
+    paths-ignore:
+      - 'sentry_logging/**'
 defaults:
   run:
     shell: bash
