--- a/sentry_logging/pubspec.yaml
+++ b/sentry_logging/pubspec.yaml
@@ -15,3 +15,4 @@ dev_dependencies:
   lints: ^1.0.0
   test: ^1.16.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
+  coverage: ^1.0.3
