--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -11,14 +11,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sentry:
   sentry_flutter:
-    path: ../
   universal_platform: ^1.0.0-nullsafety
   feedback: ^2.0.0
   provider: ^6.0.0
 
 dev_dependencies:
   sentry_dart_plugin: ^1.0.0-alpha.4
+
+dependency_overrides:
+  sentry:
+    path: ../../dart
+  sentry_flutter:
+    path: ../
 
 flutter:
   uses-material-design: true
