--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -1,11 +1,9 @@
-name: sentry-dart
+name: logging
 on:
   push:
     branches:
       - main
   pull_request:
-    paths-ignore:
-      - 'logging/**'
 defaults:
   run:
     shell: bash
@@ -16,7 +14,7 @@ jobs:
     timeout-minutes: 20
     defaults:
       run:
-        working-directory: ./dart
+        working-directory: ./logging
     strategy:
       fail-fast: false
       matrix:
@@ -48,33 +46,16 @@ jobs:
             dart test -p vm --coverage=coverage
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
-        - name: Install webdev
-          run: dart pub global activate webdev
-
-        - name: Build example
-          run: |
-            cd example
-            dart pub get
-            dart compile exe bin/example.dart
-
-        # if condition because of: The pubspec.lock file has changed since the .dart_tool/package_config.json file was generated, please run "pub get" again.
-        - name: Build Web example
-          if: runner.os != 'Windows'
-          run: |
-            cd example_web
-            dart pub get
-            webdev build
-
         - uses: codecov/codecov-action@v1
           if: runner.os == 'Linux'
           with:
             name: sentry
-            file: ./dart/coverage/lcov.info
+            file: ./logging/coverage/lcov.info
         
         - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
           if: runner.os == 'Linux'
           with:
-            path: "./dart/coverage/lcov.info"
+            path: "./logging/coverage/lcov.info"
             min_coverage: 90
 
   analyze:
