--- a/dart/analysis_options.yaml
+++ b/dart/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     # allow self-reference to deprecated members (we do this because otherwise we have
     # to annotate every member in every test, assert, etc, when we deprecate something)
     deprecated_member_use_from_same_package: warning
+    unnecessary_import: ignore
 
 linter:
   rules:
