--- a/flutter/analysis_options.yaml
+++ b/flutter/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     deprecated_member_use_from_same_package: warning
     # ignore sentry/path on pubspec as we change it on deployment
     invalid_dependency: ignore
+    unnecessary_import: ignore
   exclude:
     - example/**
 
