--- a/logging/pubspec.yaml
+++ b/logging/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_logging
 description: An integration which adds support for recording log from the logging package.
-version: 6.2.3
+version: 6.3.0-alpha.1
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
 
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   logging: ^1.0.0
-  sentry: ^6.2.0
+  sentry: ^6.3.0-alpha.1
 
 dev_dependencies:
   lints: ^1.0.0
