--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -20,6 +20,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         sdk: [stable, beta]
+        exclude:
+          - os: macos-latest
+            sdk: beta
     steps:
         - uses: dart-lang/setup-dart@v1
           with:
