--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -28,6 +28,9 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lorem-ipsum.txt
+    - assets/sentry-wordmark.png
 
 sentry:
   upload_native_symbols: false
