--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
   pull_request:
+    paths-ignore:
+        - 'dio/**'
+        - 'flutter/**'
 defaults:
   run:
     shell: bash
