make tests runnable on lower Flutter versions

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -17,10 +17,10 @@ dependencies:
   package_info_plus: ^1.0.0
 
 dev_dependencies:
-  build_runner: ^2.1.5
+  #build_runner: ^2.1.5
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.16
+  mockito: ^5.0.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   pedantic: ^1.11.1
 
