--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sentry_flutter
-version: 6.3.0-alpha.2
+version: 6.3.0-beta.1
 description: Sentry SDK for Flutter. This package aims to support different Flutter targets by relying on the many platforms supported by Sentry with native SDKs.
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ^6.3.0-alpha.1
+  sentry: ^6.3.0-beta.1
   package_info_plus: ^1.0.0
 
 dev_dependencies:
