--- a/.github/workflows/dio.yml
+++ b/.github/workflows/dio.yml
@@ -1,4 +1,4 @@
-name: sentry-dart
+name: sentry-dio
 on:
   push:
     branches:
@@ -6,7 +6,7 @@ on:
   pull_request:
     paths-ignore:
       - 'logging/**'
-      - 'dio/**'
+      - 'flutter/**'
 defaults:
   run:
     shell: bash
@@ -17,7 +17,7 @@ jobs:
     timeout-minutes: 20
     defaults:
       run:
-        working-directory: ./dart
+        working-directory: ./dio
     strategy:
       fail-fast: false
       matrix:
@@ -39,41 +39,24 @@ jobs:
             dart test -p vm --coverage=coverage
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
-        - name: Install webdev
-          run: dart pub global activate webdev
-
-        - name: Build example
-          run: |
-            cd example
-            dart pub get
-            dart compile exe bin/example.dart
-
-        # if condition because of: The pubspec.lock file has changed since the .dart_tool/package_config.json file was generated, please run "pub get" again.
-        - name: Build Web example
-          if: runner.os != 'Windows'
-          run: |
-            cd example_web
-            dart pub get
-            webdev build
-
         - uses: codecov/codecov-action@v2
           if: runner.os == 'Linux'
           with:
             name: sentry
-            file: ./dart/coverage/lcov.info
+            file: ./dio/coverage/lcov.info
         
         - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
           if: runner.os == 'Linux'
           with:
-            path: "./dart/coverage/lcov.info"
-            min_coverage: 90
+            path: "./dio/coverage/lcov.info"
+            min_coverage: 81
 
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     defaults:
       run:
-        working-directory: ./dart
+        working-directory: ./dio
     steps:
       - uses: dart-lang/setup-dart@v1
         with:
@@ -93,7 +76,7 @@ jobs:
         id: analysis
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          relativePath: dart/
+          relativePath: dio/
       - name: Check scores
         env:
           TOTAL: ${{ steps.analysis.outputs.total }}
