--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
     sdk: flutter
   sentry:
   sentry_flutter:
+  sentry_dio:
   universal_platform: ^1.0.0-nullsafety
   feedback: ^2.0.0
   provider: ^6.0.0
+  dio: ^4.0.0
 
 dev_dependencies:
+  pedantic: ^1.11.1
   sentry_dart_plugin: ^1.0.0-alpha.4
 
 dependency_overrides:
@@ -25,6 +28,8 @@ dependency_overrides:
     path: ../../dart
   sentry_flutter:
     path: ../
+  sentry_dio:
+    path: ../../dio
 
 flutter:
   uses-material-design: true
