--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -5,6 +5,7 @@ description: >
   This library supports Dart VM and Web. For Flutter consider sentry_flutter instead.
 homepage: https://docs.sentry.io/platforms/dart/
 repository: https://github.com/getsentry/sentry-dart
+issue_tracker: https://github.com/getsentry/sentry-dart/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
