--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -3,6 +3,7 @@ version: 6.3.0-beta.2
 description: Sentry SDK for Flutter. This package aims to support different Flutter targets by relying on the many platforms supported by Sentry with native SDKs.
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
+issue_tracker: https://github.com/getsentry/sentry-dart/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
