--- a/logging/pubspec.yaml
+++ b/logging/pubspec.yaml
@@ -3,6 +3,7 @@ description: An integration which adds support for recording log from the loggin
 version: 6.3.0-beta.2
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
+issue_tracker: https://github.com/getsentry/sentry-dart/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
