--- a/logging/pubspec.yaml
+++ b/logging/pubspec.yaml
@@ -17,3 +17,7 @@ dev_dependencies:
   test: ^1.16.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   coverage: ^1.0.3
+
+dependency_overrides:
+  sentry:
+    path: ../dart
