--- a/logging/pubspec.yaml
+++ b/logging/pubspec.yaml
@@ -17,6 +17,7 @@ dev_dependencies:
   test: ^1.16.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   coverage: ^1.0.3
+  meta: ^1.3.0
 
 dependency_overrides:
   sentry:
