--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   mockito: ^5.0.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   pedantic: ^1.11.1
+  meta: ^1.3.0
 
 dependency_overrides:
   sentry:
