--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sentry_flutter
-version: 6.3.0-beta.5
+version: 6.3.0
 description: Sentry SDK for Flutter. This package aims to support different Flutter targets by relying on the many platforms supported by Sentry with native SDKs.
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ^6.3.0-beta.4
+  sentry: ^6.3.0
   package_info_plus: ^1.0.0
 
 dev_dependencies:
@@ -24,6 +24,7 @@ dev_dependencies:
   mockito: ^5.0.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   pedantic: ^1.11.1
+  meta: ^1.3.0
 
 dependency_overrides:
   sentry:
