ci: Add release workflow for Craft automation

--- a/.craft.yml
+++ b/.craft.yml
@@ -1,8 +1,14 @@
-minVersion: 0.23.1
+minVersion: 0.29.0
 changelogPolicy: auto
 artifactProvider:
   name: none
 targets:
+  - name: pub-dev
+    packages:
+      dart:
+      flutter:
+      logging:
+      dio:
   - name: github
   - name: registry
     sdks:
