--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - release/**
   pull_request:
     paths-ignore:
       - 'logging/**'
@@ -80,7 +81,7 @@ jobs:
           with:
             name: sentry_flutter
             file: ./flutter/coverage/lcov.info
-        
+
         - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
           if: runner.os == 'Linux'
           with:
