--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   uuid: ^3.0.0
 
 dev_dependencies:
-  mockito: ^5.0.16
+  mockito: ^5.1.0
   pedantic: ^1.11.1 # discontinued replaced by lints
-  test: ">=1.18.2 <1.19.0" # rollback when https://github.com/dart-lang/test/issues/1620 is fixed
+  test: ^1.20.2
   yaml: ^3.1.0 # needed for version match (code and pubspec)
-  collection: ^1.15.0
-  coverage: ^1.0.3
+  collection: ^1.16.0
+  coverage: ^1.2.0
