--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     name: Changelog
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
