--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -89,6 +89,8 @@ jobs:
   package-analysis:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: axel-op/dart-package-analyzer@v3
