--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -129,6 +129,8 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
@@ -145,6 +147,8 @@ jobs:
     if: ${{ !startsWith(github.ref, 'refs/heads/release/') }}
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: axel-op/dart-package-analyzer@v3
@@ -166,6 +170,8 @@ jobs:
 
   pod-lint:
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       # https://github.com/CocoaPods/CocoaPods/issues/5275#issuecomment-315461879
@@ -174,12 +180,16 @@ jobs:
 
   swift-lint:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: norio-nomura/action-swiftlint@3.2.1
 
   ktlint:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -196,6 +206,8 @@ jobs:
 
   detekt:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: natiginfo/action-detekt-all@1.19.0
