--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -58,6 +58,8 @@ jobs:
     defaults:
       run:
         working-directory: ./logging
+    strategy:
+      fail-fast: false
     steps:
       - uses: dart-lang/setup-dart@v1
         with:
@@ -75,6 +77,8 @@ jobs:
     if: ${{ !startsWith(github.ref, 'refs/heads/release/') }}
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: axel-op/dart-package-analyzer@v3
