--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -6,8 +6,8 @@ on:
       - release/**
   pull_request:
     paths-ignore:
-      - 'logging/**'
-      - 'dio/**'
+      - "logging/**"
+      - "dio/**"
 defaults:
   run:
     shell: bash
@@ -21,8 +21,8 @@ jobs:
       # max-parallel: 4
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        target: ['ios', 'android', 'web', 'macos', 'linux', 'windows']
-        channel: ['stable', 'beta']
+        target: ["ios", "android", "web", "macos", "linux", "windows"]
+        channel: ["stable", "beta"]
         exclude:
           - os: ubuntu-latest
             target: ios
@@ -50,88 +50,88 @@ jobs:
     #   cancel-in-progress: true
 
     steps:
-        - name: Cancel Previous Runs
-          uses: styfle/cancel-workflow-action@0.9.1
-          with:
-            access_token: ${{ github.token }}
-        - uses: actions/checkout@v2
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
+      - uses: actions/checkout@v2
 
-        - uses: actions/setup-java@v2
-          with:
-            distribution: 'adopt'
-            java-version: '8'
+      - uses: actions/setup-java@v2
+        with:
+          distribution: "adopt"
+          java-version: "8"
 
-        # Install required dependencies for Flutter on Linux on Ubuntu
-        - name: 'Setup Linux'
-          run: |
-            sudo apt update
-            sudo apt install -y cmake dbus libblkid-dev libgtk-3-dev liblzma-dev ninja-build pkg-config xvfb
-            sudo apt install -y network-manager upower
-          if: matrix.os == 'ubuntu-latest'
+      # Install required dependencies for Flutter on Linux on Ubuntu
+      - name: "Setup Linux"
+        run: |
+          sudo apt update
+          sudo apt install -y cmake dbus libblkid-dev libgtk-3-dev liblzma-dev ninja-build pkg-config xvfb
+          sudo apt install -y network-manager upower
+        if: matrix.os == 'ubuntu-latest'
 
-        - uses: subosito/flutter-action@v2
-          with:
-            channel: ${{ matrix.channel }}
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: ${{ matrix.channel }}
 
-        - run: flutter upgrade
+      - run: flutter upgrade
 
-        - name: Pub Get
-          run: |
-            cd flutter
-            flutter pub get
+      - name: Pub Get
+        run: |
+          cd flutter
+          flutter pub get
 
-        - name: Test chrome
-          if: runner.os != 'macOS'
-          run: |
-            cd flutter
-            flutter test --platform chrome --test-randomize-ordering-seed=random
+      - name: Test chrome
+        if: runner.os != 'macOS'
+        run: |
+          cd flutter
+          flutter test --platform chrome --test-randomize-ordering-seed=random
 
-        - name: Test VM with coverage
-          if: runner.os != 'macOS'
-          run: |
-            cd flutter
-            flutter test --coverage --test-randomize-ordering-seed=random
+      - name: Test VM with coverage
+        if: runner.os != 'macOS'
+        run: |
+          cd flutter
+          flutter test --coverage --test-randomize-ordering-seed=random
 
-        - uses: codecov/codecov-action@v2
-          if: runner.os == 'Linux'
-          with:
-            name: sentry_flutter
-            file: ./flutter/coverage/lcov.info
+      - uses: codecov/codecov-action@v2
+        if: runner.os == 'Linux'
+        with:
+          name: sentry_flutter
+          file: ./flutter/coverage/lcov.info
 
-        - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
-          if: runner.os == 'Linux'
-          with:
-            path: "./flutter/coverage/lcov.info"
-            min_coverage: 90
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        if: runner.os == 'Linux'
+        with:
+          path: "./flutter/coverage/lcov.info"
+          min_coverage: 90
 
-        - name: Build ${{ matrix.target }}
-          run: |
-            flutter config --enable-windows-desktop
-            flutter config --enable-macos-desktop
-            flutter config --enable-linux-desktop
-            cd flutter/example
-            TARGET=${{ matrix.target }}
-            flutter pub get
-            case $TARGET in
-            ios)
-            flutter build ios --no-codesign
-            ;;
-            macos)
-            flutter build macos
-            ;;
-            android)
-            flutter build appbundle
-            ;;
-            web)
-            flutter build web
-            ;;
-            linux)
-            flutter build linux
-            ;;
-            windows)
-            flutter build windows
-            ;;
-            esac
+      - name: Build ${{ matrix.target }}
+        run: |
+          flutter config --enable-windows-desktop
+          flutter config --enable-macos-desktop
+          flutter config --enable-linux-desktop
+          cd flutter/example
+          TARGET=${{ matrix.target }}
+          flutter pub get
+          case $TARGET in
+          ios)
+          flutter build ios --no-codesign
+          ;;
+          macos)
+          flutter build macos
+          ;;
+          android)
+          flutter build appbundle
+          ;;
+          web)
+          flutter build web
+          ;;
+          linux)
+          flutter build linux
+          ;;
+          windows)
+          flutter build windows
+          ;;
+          esac
 
   analyze:
     runs-on: ubuntu-latest
@@ -191,8 +191,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '8'
+          distribution: "adopt"
+          java-version: "8"
       - run: |
           curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.40.0/ktlint
           chmod a+x ktlint
