--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -22,6 +22,11 @@ jobs:
       matrix:
         sdk: [stable, beta]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@a40b8845c0683271d9f53dfcb887a7e181d3918b
+        with:
+          access_token: ${{ github.token }}
+
         - uses: dart-lang/setup-dart@v1
           with:
             sdk: ${{ matrix.sdk }}
