Fix mac architecture flutter

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -65,6 +65,7 @@ jobs:
         - uses: subosito/flutter-action@v2
           with:
             channel: ${{ matrix.channel }}
+            architecture: x64
 
         - run: flutter upgrade
 
