--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -54,6 +54,6 @@ android {
 }
 
 dependencies {
-    api 'io.sentry:sentry-android:5.7.0'
+    api 'io.sentry:sentry-android:6.0.0-alpha.6'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
