Fix linters and ignore web tests for vm tests

--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
 
 dev_dependencies:
   mockito: ^5.1.0
-  pedantic: ^1.11.1 # discontinued replaced by lints
-  test: ^1.20.2
+  lints: ^2.0.0
+  test: ^1.21.1
   yaml: ^3.1.0 # needed for version match (code and pubspec)
   collection: ^1.16.0
   coverage: ^1.2.0
