--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,7 +24,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.1.0
   yaml: ^3.1.0 # needed for version match (code and pubspec)
-  pedantic: ^1.11.1
+  flutter_lints: ^2.0.0
 
 dependency_overrides:
   sentry:
