--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -39,7 +39,7 @@ jobs:
             dart pub get
             dart test -p chrome --test-randomize-ordering-seed=random --chain-stack-traces
             dart test -p vm --coverage=coverage --test-randomize-ordering-seed=random --chain-stack-traces
-            dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+            dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
         - name: Install webdev
           run: dart pub global activate webdev
