--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -58,13 +58,13 @@ jobs:
             dart pub get
             webdev build
 
-        - uses: codecov/codecov-action@v2
+        - uses: codecov/codecov-action@v3
           if: runner.os == 'Linux'
           with:
             name: sentry
             file: ./dart/coverage/lcov.info
 
-        - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
           if: runner.os == 'Linux'
           with:
             path: "./dart/coverage/lcov.info"
