--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -88,13 +88,13 @@ jobs:
             cd flutter
             flutter test --coverage --test-randomize-ordering-seed=random
 
-        - uses: codecov/codecov-action@v2
+        - uses: codecov/codecov-action@v3
           if: runner.os == 'Linux'
           with:
             name: sentry_flutter
             file: ./flutter/coverage/lcov.info
 
-        - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
           if: runner.os == 'Linux'
           with:
             path: "./flutter/coverage/lcov.info"
