--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -40,13 +40,13 @@ jobs:
             dart test -p vm --coverage=coverage --test-randomize-ordering-seed=random --chain-stack-traces
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
-        - uses: codecov/codecov-action@v2
+        - uses: codecov/codecov-action@v3
           if: runner.os == 'Linux'
           with:
-            name: sentry
+            name: sentry_logging
             file: ./logging/coverage/lcov.info
 
-        - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
           if: runner.os == 'Linux'
           with:
             path: "./logging/coverage/lcov.info"
