--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -59,14 +59,14 @@ jobs:
             webdev build
 
         - uses: codecov/codecov-action@v3
-          if: runner.os == 'Linux'
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             name: sentry
             file: ./dart/coverage/lcov.info
 
         # 1.2.1
         - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
-          if: runner.os == 'Linux'
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             path: "./dart/coverage/lcov.info"
             min_coverage: 85
