--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -26,12 +26,24 @@ jobs:
           with:
             sdk: ${{ matrix.sdk }}
         - uses: actions/checkout@v3
-        - name: Test
-          run: |
-            dart pub get
-            dart analyze --fatal-infos
-            dart format --set-exit-if-changed ./
         - name: Run
           if: env.SENTRY_AUTH_TOKEN != null
           run: |
+            dart pub get
             dart run --define=SENTRY_ENVIRONMENT=e2e
+
+  analyze:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    defaults:
+      run:
+        working-directory: ./e2e_test
+    steps:
+      - uses: dart-lang/setup-dart@v1
+        with:
+          sdk: stable
+      - uses: actions/checkout@v3
+      - run: |
+          dart pub get
+          dart analyze --fatal-infos
+          dart format --set-exit-if-changed ./
