--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -41,14 +41,14 @@ jobs:
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
         - uses: codecov/codecov-action@v3
-          if: runner.os == 'Linux'
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             name: sentry_logging
             file: ./logging/coverage/lcov.info
 
         # 1.2.1
         - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
-          if: runner.os == 'Linux'
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             path: "./logging/coverage/lcov.info"
             min_coverage: 90
