--- a/.github/workflows/e2e_dart.yml
+++ b/.github/workflows/e2e_dart.yml
@@ -5,6 +5,10 @@ on:
       - main
       - release/**
   pull_request:
+    paths-ignore:
+      - 'logging/**'
+      - 'dio/**'
+      - 'flutter/**'
 
 env:
   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
