--- a/.github/workflows/dio.yml
+++ b/.github/workflows/dio.yml
@@ -40,11 +40,11 @@ jobs:
             dart test -p vm --coverage=coverage --test-randomize-ordering-seed=random --chain-stack-traces
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
-        - uses: codecov/codecov-action@v3
+        - uses: codecov/codecov-action@v2
           if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             name: sentry_dio
-            file: ./dio/coverage/lcov.info
+            files: ./dio/coverage/lcov.info
 
         # 1.2.1
         - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
