--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -88,11 +88,11 @@ jobs:
             cd flutter
             flutter test --coverage --test-randomize-ordering-seed=random
 
-        - uses: codecov/codecov-action@v3
+        - uses: codecov/codecov-action@v2
           if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
           with:
             name: sentry_flutter
-            file: ./flutter/coverage/lcov.info
+            files: ./flutter/coverage/lcov.info
 
         # 1.2.1
         - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
