--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -88,12 +88,12 @@ jobs:
             cd flutter
             flutter test --coverage --test-randomize-ordering-seed=random
 
-        - uses: codecov/codecov-action@v2
-          if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
-          with:
-            name: sentry_flutter
-            files: ./flutter/coverage/lcov.info
-            verbose: true
+        #   remove comment after https://github.com/codecov/codecov-action/issues/600
+        # - uses: codecov/codecov-action@v2
+        #   if: runner.os == 'Linux' && matrix.sdk == 'stable' && matrix.target == 'linux'
+        #   with:
+        #     name: sentry_flutter
+        #     file: ./flutter/coverage/lcov.info
 
         # 1.2.1
         - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
