--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry:
-    path: ../dart
+  sentry: ^6.5.1
   package_info_plus: ^1.0.0
   meta: ^1.3.0
 
