--- a/dart/analysis_options.yaml
+++ b/dart/analysis_options.yaml
@@ -21,3 +21,4 @@ linter:
     prefer_function_declarations_over_variables: false
     no_leading_underscores_for_local_identifiers: false
     avoid_renaming_method_parameters: false
+    unawaited_futures: true
