delete not used code

--- a/min_version_test/pubspec.yaml
+++ b/min_version_test/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  sentry:
+  sentry_flutter:
+
+dependency_overrides:
+  sentry:
+    path: dart
+  sentry_flutter:
+    path: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
