--- a/.github/workflows/min_version_test.yml
+++ b/.github/workflows/min_version_test.yml
@@ -1,4 +1,4 @@
-name: flutter min version test
+name: min version test
 on:
   push:
     branches:
@@ -33,5 +33,5 @@ jobs:
           run: |
             cd min_version_test
             flutter pub get
-            # flutter build ios --no-codesign
+            flutter build ios --no-codesign
             flutter build appbundle
