--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
   sentry:
   sentry_flutter:
   sentry_dio:
+  sentry_logging:
   universal_platform: ^1.0.0-nullsafety
   feedback: ^2.0.0
   provider: ^6.0.0
   dio: ^4.0.0
+  logging: ^1.0.2
 
 dev_dependencies:
   pedantic: ^1.11.1
@@ -30,6 +32,8 @@ dependency_overrides:
     path: ../
   sentry_dio:
     path: ../../dio
+  sentry_logging:
+    path: ../../logging
 
 flutter:
   uses-material-design: true
