--- a/min_version_test/pubspec.yaml
+++ b/min_version_test/pubspec.yaml
@@ -20,6 +20,8 @@ version: 1.0.0+1
 environment:
   sdk: '2.12.0'
   flutter: '2.0.0'
+  # sdk: '>=2.12.0'
+  # flutter: '>=2.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,12 +38,20 @@ dev_dependencies:
     sdk: flutter
   sentry:
   sentry_flutter:
+  sentry_dio:
+  sentry_logging:
+  dio: ^4.0.0
+  logging: ^1.0.2
 
 dependency_overrides:
   sentry:
     path: ../dart
   sentry_flutter:
     path: ../flutter
+  sentry_dio:
+    path: ../dio
+  sentry_logging:
+    path: ../logging
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
