added random number generator

--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  crypto: ^3.0.2 # TODO: consider vendoring sha1
   http: ^0.13.0
   meta: ^1.3.0
   stack_trace: ^1.10.0
